--- a/packages/parent/package.json
+++ b/packages/parent/package.json
@@ -1,12 +1,12 @@
 {
     "name": "@sanokhin/example-lerna-parent",
-    "version": "0.0.0",
+    "version": "1.0.0",
     "description": "Parent package, required to group the other packages into a single dependency.",
     "author": "Stepan Anokhin",
     "license": "ISC",
     "dependencies": {
-        "@sanokhin/example-lerna-child-a": "*",
-        "@sanokhin/example-lerna-child-b": "*",
-        "@sanokhin/example-lerna-child-c": "*"
+        "@sanokhin/example-lerna-child-a": "^1.0.0",
+        "@sanokhin/example-lerna-child-b": "^1.0.0",
+        "@sanokhin/example-lerna-child-c": "^1.0.0"
     }
 }
