--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "license": "ISC",
     "devDependencies": {
         "lerna": "^6.0.1"
+    },
+    "scripts": {
+        "release:canary": "./scripts/canary-release.sh"
     }
 }
