--- a/.github/workflows/canary.yaml
+++ b/.github/workflows/canary.yaml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+          ref: ${{ github.ref_name }}
 
       - name: "Setup NodeJS"
         uses: actions/setup-node@v2
