Fix canary workflow

--- a/.github/workflows/canary.yaml
+++ b/.github/workflows/canary.yaml
@@ -28,4 +28,6 @@ jobs:
 
       - name: "Make Canary Release"
         run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           npm run release:canary
