--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -53,7 +53,7 @@ jobs:
           script: |
             // See: https://octokit.github.io/rest.js/v19#repos-merge
             // See: https://github.com/actions/github-script
-            octokit.rest.repos.merge({
+            github.rest.repos.merge({
               owner: context.repo.owner,
               repo: context.repo.repo,
               base: "master",
