--- a/.github/workflows/sanity.yaml
+++ b/.github/workflows/sanity.yaml
@@ -11,11 +11,10 @@ jobs:
       - uses: actions/github-script@v6
         with:
           script: |
-            // Get a list of all issues created by the PR opener
-            // See: https://octokit.github.io/rest.js/#pagination
+            const pull_request = context.payload.pull_request;
             const response = await github.rest.repos.compareCommitsWithBasehead({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              basehead: `staging...${context.pull_request.head.ref}`,
+              basehead: `staging...${pull_request.head.ref}`,
             });
             console.log(JSON.stringify(response.data, null, 2));
