Fix publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -66,4 +66,5 @@ jobs:
               repo: context.repo.repo,
               base: "staging",
               head: "master",
+              merge_method: "rebase",
             });
