--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -66,5 +66,5 @@ jobs:
               repo: context.repo.repo,
               base: "staging",
               head: "master",
-              merge_method: "rebase",
+              commit_message: "Auto-merge master into staging"
             });
