--- a/.github/workflows/sanity_check.yaml
+++ b/.github/workflows/sanity_check.yaml
@@ -1,15 +1,13 @@
 name: Merge Sanity
 on:
   pull_request:
-    types: [ opened, synchronize, closed ]
+    types: [ opened, synchronize ]
     branches:
       - master
-      - staging
 
 jobs:
   check:
     runs-on: ubuntu-latest
-    if: github.base_ref == 'master' && !github.event.pull_request.merged
     steps:
       - name: "Check Merged into Staging"
         uses: actions/github-script@v6
@@ -29,19 +27,3 @@ jobs:
             if(status !== "behind") {
               core.setFailed(`Feature-branch '${pull_request.head.ref}' must be merged into 'staging' before merging into 'master'.`);
             }
-
-  update:
-    runs-on: ubuntu-latest
-    if: github.base_ref == 'staging' && github.event.pull_request.merged
-    steps:
-      - name: "Update Sanity Check"
-        uses: actions/github-script@v6
-        with:
-          script: |
-            console.log(JSON.stringify(context, null, 2));
-            octokit.rest.actions.createWorkflowDispatch({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              workflow_id: "sanity.yaml",
-              ref: context.ref,
-            });
