--- a/.github/workflows/sanity_update.yaml
+++ b/.github/workflows/sanity_update.yaml
@@ -16,7 +16,7 @@ jobs:
           script: |
             console.log(JSON.stringify(context, null, 2));
             const pull_request = context.payload.pull_request;
-            octokit.rest.actions.createWorkflowDispatch({
+            github.rest.actions.createWorkflowDispatch({
               owner: context.repo.owner,
               repo: context.repo.repo,
               workflow_id: "sanity_check.yaml",
