--- a/.github/workflows/sanity_update.yaml
+++ b/.github/workflows/sanity_update.yaml
@@ -15,9 +15,9 @@ jobs:
         with:
           script: |
             const pull_request = context.payload.pull_request;
-            octokit.rest.actions.createWorkflowDispatch({
+            github.rest.actions.createWorkflowDispatch({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              "sanity_check.yaml",
-              pull_request.head.ref,
+              workflow_id: "sanity_check.yaml",
+              ref: pull_request.head.ref,
             });
