Fix sanity check

--- a/.github/workflows/sanity_check.yaml
+++ b/.github/workflows/sanity_check.yaml
@@ -16,14 +16,24 @@ jobs:
           script: |
             console.log(JSON.stringify(context, null, 2));
             
+            // Get feature-branch
+            let featureBranch = null;
+            if (context.eventName == "workflow_dispatch") {
+              featureBranch = context.ref;
+            } else if(context.eventName == "pull_request") {
+              featureBranch = context.payload.pull_request.head.ref;
+            } else {
+              core.setFailed(`Unsupported event: ${context.eventName}`);
+            }
+
             // Compare feature-branch with staging
             const response = await github.rest.repos.compareCommitsWithBasehead({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              basehead: `staging...${context.ref}`,
+              basehead: `staging...${featureBranch}`,
             });
             const status = response.data.status;
             
             if(status !== "behind") {
-              core.setFailed(`Feature-branch '${pull_request.head.ref}' must be merged into 'staging' before merging into 'master'.`);
+              core.setFailed(`Feature-branch '${featureBranch}' must be merged into 'staging' before merging into 'master'.`);
             }
