--- a/.github/workflows/sanity_check.yaml
+++ b/.github/workflows/sanity_check.yaml
@@ -1,32 +1,24 @@
 name: Merge Sanity
 on:
-  workflow_dispatch:
   pull_request:
-    types: [ opened, synchronize ]
+    types: [ closed ]
     branches:
-      - master
+      - staging
 
 jobs:
   check:
+    if: github.event.pull_request.merged
     runs-on: ubuntu-latest
     steps:
       - name: "Check Merged into Staging"
         uses: actions/github-script@v6
         with:
+          # See actions/github-script@v6: https://github.com/actions/github-script#actionsgithub-script
+          # See compareCommitsWithBasehead: https://octokit.github.io/rest.js/v19#repos-compare-commits-with-basehead
+          # See @actions/core: https://github.com/actions/toolkit/tree/main/packages/core#exit-codes
           script: |
-            console.log(JSON.stringify(context, null, 2));
-            
-            // Get feature-branch
-            let featureBranch = null;
-            if (context.eventName == "workflow_dispatch") {
-              featureBranch = context.ref;
-            } else if(context.eventName == "pull_request") {
-              featureBranch = context.payload.pull_request.head.ref;
-            } else {
-              core.setFailed(`Unsupported event: ${context.eventName}`);
-            }
-
             // Compare feature-branch with staging
+            const featureBranch = context.payload.pull_request.head.ref;
             const response = await github.rest.repos.compareCommitsWithBasehead({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -34,6 +26,9 @@ jobs:
             });
             const status = response.data.status;
             
+            // Set check status
             if(status !== "behind") {
               core.setFailed(`Feature-branch '${featureBranch}' must be merged into 'staging' before merging into 'master'.`);
+            } else {
+              core.info(`Feature-branch '${featureBranch}' could be merged into 'master' because it is already merged into 'staging'
             }
