--- a/.github/workflows/sanity_check.yaml
+++ b/.github/workflows/sanity_check.yaml
@@ -8,8 +8,8 @@ on:
 
 jobs:
   confirm-merged-into-staging:
-    if: github.event.pull_request.merged
     runs-on: ubuntu-latest
+    needs: [ refresh-status ]
     steps:
       - name: "Check Merged into Staging"
         uses: actions/github-script@v6
@@ -33,3 +33,6 @@ jobs:
             } else {
               core.info(`Feature-branch '${featureBranch}' could be merged into 'master' because it is already merged into 'staging'`);
             }
+
+  refresh-staging-status:
+    if: github.event.pull_request.merged
