--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,10 +23,12 @@ jobs:
           npm set "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}"
 
       - name: "Version and Publish"
+        env:
+          CI_TOKEN: ${{ secrets.CI_TOKEN }}
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git remote set-url origin https://x-access-token:${{ secrets.CI_TOKEN }}@github.com/$GITHUB_REPOSITORY
+          git remote set-url origin https://x-access-token:${CI_TOKEN}@github.com/$GITHUB_REPOSITORY
 
           if [ ${{ github.ref_name }} = dev ]; then
             npx lerna version --no-changelog --conventional-commits --conventional-prerelease --include-merged-tags --no-push --preid alpha --yes
