--- a/.github/workflows/suggest.yaml
+++ b/.github/workflows/suggest.yaml
@@ -13,4 +13,9 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            console.log(JSON.stringify(context, null, 2));
+            const response = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.payload.pull_request.number,
+            });
+            console.log(JSON.stringify(response, null, 2));
