--- a/.github/workflows/suggest.yaml
+++ b/.github/workflows/suggest.yaml
@@ -22,7 +22,7 @@ jobs:
             });
             const status = comparison.data.status;
             
-            const pulls = await github.rest.pulls.list({
+            const pullsToStaging = await github.rest.pulls.list({
               owner: context.repo.owner,
               repo: context.repo.repo,
               state: "open",
@@ -30,10 +30,8 @@ jobs:
               head: featureBranch,
             });
             
-            console.log(JSON.stringify(pulls, null, 2));
-            
             // Make suggestion
-            if(status !== "behind") {
+            if(status !== "behind" && pullsToStaging.data.length === 0) {
               const pullRequestURL = `https://github.com/${context.repo.owner}/${context.repo.repo}/pull/new/staging...${featureBranch}`;
               const suggestion = `### Suggestion\n\nCreate a pull request for \`${featureBranch}\` -> \`staging\` by visiting this link:  [Create Pull Request](${pullRequestURL}).`
               
@@ -43,5 +41,4 @@ jobs:
                 issue_number: context.payload.pull_request.number,
                 body: suggestion,
               });
-            } 
-            
+            }
