--- a/packages/a/package.json
+++ b/packages/a/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@sanokhin/example-lerna-child-a",
-    "version": "1.0.21",
+    "version": "1.0.22-beta.0",
     "main": "index.js",
     "private": false,
     "description": "Library A",
