--- a/packages/parent/package.json
+++ b/packages/parent/package.json
@@ -1,12 +1,12 @@
 {
     "name": "@sanokhin/example-lerna-parent",
-    "version": "1.0.24",
+    "version": "1.0.25-beta.0",
     "private": false,
     "description": "Parent package, required to group the other packages into a single dependency.",
     "author": "Stepan Anokhin",
     "license": "ISC",
     "dependencies": {
-        "@sanokhin/example-lerna-child-a": "^1.0.21",
+        "@sanokhin/example-lerna-child-a": "^1.0.22-beta.0",
         "@sanokhin/example-lerna-child-b": "^1.0.7",
         "@sanokhin/example-lerna-child-c": "^1.0.2"
     },
