--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "author": "Stepan Anokhin",
     "license": "ISC",
     "devDependencies": {
-        "lerna": "^6.0.1"
+        "lerna": "^6.0.1",
+        "semver": "^7.3.8"
     },
     "scripts": {
-        "release:canary": "./scripts/canary-release.sh"
+        "release:canary": "./scripts/canary-release.sh",
+        "prepare:staging": "node ./scripts/restore-versions.js next https://registry.npmjs.org && git add . && git commit -m 'Restore published pre-release versions'",
+        "version:staging": "lerna version --no-changelog --conventional-commits --conventional-prerelease --include-merged-tags --no-push --preid beta --yes",
+        "publish:staging": "lerna publish from-package --dist-tag next --yes",
+        "release:staging": "npm run prepare:staging && npm run version:staging && npm run publish:staging",
+        "version:ga": "lerna version --no-changelog --conventional-commits --conventional-graduate --yes",
+        "publish:ga": "lerna publish from-package --yes",
+        "release:ga": "npm run version:ga && npm run publish:ga"
     }
 }
