--- a/.github/workflows/canary.yaml
+++ b/.github/workflows/canary.yaml
@@ -33,3 +33,14 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           npm run release:canary
+
+      - name: "Suggest Package Config"
+        uses: actions/github-script@v6
+          with:
+            script: |
+              const commentsResponse = await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.payload.pull_request.number,
+              });
+              console.log(JSON.stringify(commentsResponse.data, null, 2))
