--- a/.github/workflows/canary.yaml
+++ b/.github/workflows/canary.yaml
@@ -38,7 +38,7 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            const commentsResponse = await github.rest.issues.createComment({
+            const commentsResponse = await github.rest.issues.listComments({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.payload.pull_request.number,
