--- a/.github/workflows/debug_wf.yaml
+++ b/.github/workflows/debug_wf.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print Script Context
-        uses: actions/actions/github-script@v6
+        uses: actions/github-script@v6
         with:
           script: |
             console.log(JSON.stringify(context, null, 2));
